# PibbyPSX

./: CMakeLists.txt  Makefile  Makefile.pc  Makefile.tim  Makefile.tools  Makefile.xa  funkin.xml
ill-be-fine/: ILL-BE-FINE-hard.json  script.lua
iso/beach/: beach.png.txt
iso/bf/: pibby.png.txt  retry.png.txt
iso/bubble/: right0.png.txt  up1.png.txt
iso/chart/: Brotherly-Bond-hard.json  Corrupted-Hero-hard.json  Gummy-Substance-hard.json  ILL-BE-FINE-hard.json  NO-HERO-hard.json  SAVE-THE-DAY-hard.json  blue-balled-hard.json  elastic-destruction-hard.json  glitched-duo-hard.json  glitched-gem-hard.json  gunshot-hard.json  last-spooktober-hard.json  lost-legend-hard.json  my-friends-hard.json  no-hero-remastered-hard.json  overworked-hard.json  the-change-hard.json  together-forever-hard.json  you-can't-save-them.json  you-cant-save-them.json
iso/menu/: back.png.txt  bfmenu.png.txt  icon.png.txt  story.png.txt  title.png.txt
iso/music/: week1b.xa.txt
iso/spinel/: right0.png.txt
iso/stage/: health.png.txt  hud0.png.txt  hud1.png.txt  pibby.png.txt
iso/week1/: back1.png.txt
iso/week3/: sky.png.txt
src/: audio.h  audio_def.h  character.c  character.h  gfx.h  loadscr.c  main.c  menu.c  menu.h  player.h  stage.c  stage.h  stagedef_disc1.h
src/character/: bf.c  bfc.c  bfc.h  bfmenu.c  bfmenu.h  bubble.c  bubble.h  dad.c  finn.c  finn.h  gf.c  jake.c  jake.h  mordecai.c  mordecai.h  pico.c  pico.h  spinel.c  spinel.h  spook.c  spook.h  steven.c  steven.h
src/object/: combo.c
src/pc/: gfx.c
src/psx/: gfx.c
src/stage/: beach.c  beach.h  park.c  park.h  school.c  school.h  week1.c  week2.c  week2.h  week3.c
tools/funkinchartpak/: funkinchartpak.cpp
